// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item Mutliple MenuItem 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-weight: 100;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition-property: background-color,border,borderRadius,opacity,boxShadow;
  transition-property: background-color,border,borderRadius,opacity,boxShadow;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  font-size: 1.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  height: 3.5rem;
}

.c0 > i {
  vertical-align: middle;
}

.c1 {
  padding: 0rem 0.8rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  overflow: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 i {
  vertical-align: middle;
}

.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<li
  checked={false}
  className="c0"
  disabled={false}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
  title=""
>
  <div
    className="c1"
    style={Object {}}
  >
    <span
      className="c2"
    >
      <a>
        hello
      </a>
    </span>
  </div>
</li>
`;

exports[`Item Mutliple MenuItem checked 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-weight: 100;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition-property: background-color,border,borderRadius,opacity,boxShadow;
  transition-property: background-color,border,borderRadius,opacity,boxShadow;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  font-size: 1.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  height: 3.5rem;
}

.c0 > i {
  vertical-align: middle;
}

.c1 {
  padding: 0rem 0.8rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  overflow: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 i {
  vertical-align: middle;
}

.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<li
  checked={true}
  className="c0"
  disabled={false}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "color": "#4d63ff",
      "fontWeight": 900,
    }
  }
  title=""
>
  <div
    className="c1"
    style={Object {}}
  >
    <span
      className="c2"
    >
      <a>
        hello
      </a>
    </span>
  </div>
</li>
`;

exports[`Item Single MenuItem 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-weight: 100;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition-property: background-color,border,borderRadius,opacity,boxShadow;
  transition-property: background-color,border,borderRadius,opacity,boxShadow;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  font-size: 1.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  height: 3.5rem;
}

.c0 > i {
  vertical-align: middle;
}

.c1 {
  padding: 0rem 0.8rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  overflow: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 i {
  vertical-align: middle;
}

.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<li
  checked={false}
  className="c0"
  disabled={false}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
  title="hello"
>
  <div
    className="c1"
    style={Object {}}
  >
    <span
      className="c2"
    >
      hello
    </span>
  </div>
</li>
`;

exports[`Item Single MenuItem checked 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-weight: 100;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition-property: background-color,border,borderRadius,opacity,boxShadow;
  transition-property: background-color,border,borderRadius,opacity,boxShadow;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  font-size: 1.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  height: 3.5rem;
}

.c0 > i {
  vertical-align: middle;
}

.c1 {
  padding: 0rem 0.8rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  overflow: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 i {
  vertical-align: middle;
}

.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<li
  checked={true}
  className="c0"
  disabled={false}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "color": "#4d63ff",
      "fontWeight": 900,
    }
  }
  title=""
>
  <div
    className="c1"
    style={Object {}}
  >
    <span
      className="c2"
    >
      <a>
        hello
      </a>
    </span>
  </div>
</li>
`;

exports[`Item children: null 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-weight: 100;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition-property: background-color,border,borderRadius,opacity,boxShadow;
  transition-property: background-color,border,borderRadius,opacity,boxShadow;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  font-size: 1.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  height: 3.5rem;
}

.c0 > i {
  vertical-align: middle;
}

.c1 {
  padding: 0rem 0.8rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  overflow: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 i {
  vertical-align: middle;
}

.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<li
  checked={false}
  className="c0"
  disabled={false}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
  title=""
>
  <div
    className="c1"
    style={Object {}}
  >
    <span
      className="c2"
    />
  </div>
</li>
`;
